# Tesis_Spa-Jeb

./: .gitignore  README.md  flashcards2 - Sheet1 (1).csv  pyproject.toml
config/: normalization_rules.json  sources.json
data/processed/: dataset_limpio.csv  dataset_pre_embeddings.csv
data/processed/03_pre_embeddings/: dataset_pre_embeddings.csv
data/raw/: dataset_esp_shiwilu.csv
notebooks/: test_embeddings.ipynb
reports/: audit_problem_rows.csv  audit_summary.json  normalization_log.csv  preprocessing_summary.json  rows_removed_01_filtrado.csv
reports/00_pdf/: summary.json
reports/01b_unificado/: cross_duplicates.csv  summary.json
reports/02_normalizacion/: normalization_log.csv  rows_removed.csv  summary.json
reports/03_auditoria/: problem_rows.csv  summary.json
reports/04_embeddings/: comparison_report.json  sentence_transformers_summary.json  similarity_scores.csv
scripts/: 00_extraer_dataset_pdf.py  01_filtrar_dataset.py  01b_unificar_fuentes.py  02_depurar_dataset.py  03_auditar_dataset.py
src/embeddings/: compare_embeddings.py  preprocess.py  test_similarity.py  train_fasttext.py  train_sentence_transformers.py  utils.py  visualize_embeddings.py
