[project]
name = "tesis-embeddings-esp-shiwilu"
version = "0.1.0"
description = "Pipeline de procesamiento y generación de embeddings bilingüe español-shiwilu"
requires-python = ">=3.12"
dependencies = [
    "pandas>=2.2",
    "matplotlib>=3.9",
    "pypdf>=5.4",
    "gensim>=4.3",
    "numpy>=1.26",
    "sentence-transformers>=2.2",
    "torch>=2.0",
    "jupyter>=1.0",
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0"]
build-backend = "poetry.core.masonry.api"
